Fix long navigation on mobile screen

--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -84,7 +84,6 @@ header {
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
-    height: 100vh;
     text-align: center; 
   }
 
